--- a/src/components/Tierlist/Tierlist.module.css
+++ b/src/components/Tierlist/Tierlist.module.css
@@ -10,19 +10,31 @@
 }
 
 .buttonHeader {
-    padding: 12px 10px;
+    padding: 6px 8px 4px;
     border-bottom: 1px dimgray solid;
+    align-items: center;
 }
 
-.buttonHeader span, a {
-    all: unset;
-    padding: 4px 8px;
+.imageButton {
+    padding: 4px 4px;
     border: 1px #E0E0CD solid;
     background-color: #7E648A;
     margin-right: 8px;
+    /* align-items: center;
+    justify-content: center; */
 }
 
-.buttonHeader span:hover, a:hover {
+.linkImageButton {
+    position: absolute;
+    padding: 4px 4px 1px 4px;
+    border: 1px #E0E0CD solid;
+    background-color: #7E648A;
+    margin-right: 8px;
+    /* align-items: center;
+    justify-content: center; */
+}
+
+.imageButton:hover, .linkImageButton:hover {
     background-color: #967CA3;
 }
 
