[0.3.0] Aggregate tierlist and start prettification

--- a/src/components/AppNav.module.css
+++ b/src/components/AppNav.module.css
@@ -1,8 +1,12 @@
 .container {
+    position: fixed;
+    z-index: 100;
     background-color: #251D28;
-    min-height: 24px;
-    max-height: 24px;
+    min-height: 26px;
+    max-height: 26px;
     padding: 4px 0 4px 6px;
+    margin-bottom: 24px;
+    width: 100%;
     /* align-items: center; */
 }
 
@@ -24,6 +28,7 @@
     float: left;
     font-weight: 600;
     font-size: large;
+    margin-top: 1px;
     margin-right: 6px;
 }
 
@@ -32,4 +37,30 @@
     font-weight: lighter;
     margin-top: 2px;
     margin-right: 8px;
+}
+
+.imageButton {
+    float: left;
+    padding: 2px;
+    border: 1px #E0E0CD solid;
+    background-color: #5E446A;
+    margin-top: 2px;
+    margin-right: 6px;
+    /* align-items: center;
+    justify-content: center; */
+}
+
+.linkImageButton {
+    position: absolute;
+    padding: 0 3px 0px 3px;
+    border: 1px #E0E0CD solid;
+    background-color: #5E446A;
+    margin-top: 2px;
+    margin-right: 8px;
+    /* align-items: center;
+    justify-content: center; */
+}
+
+.imageButton:hover, .linkImageButton:hover {
+    background-color: #7E648A;
 }
