--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,26 @@
 :root {
     --bg-default: #3D3143;
     --text-default: #E0E0CD;
+    --bg-gold-1: #C8A800;
+    --bg-gold-2: #A87000;
+    --bg-green: #007000;
+    --bg-blue: #0000C0;
+    --bg-red-1: #A00000;
+    --bg-red-2: #600000;
+    --bg-black: #080808;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--bg-default);
-  color: var(--text-default);
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: var(--bg-default);
+    color: var(--text-default);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
