--- a/src/components/Tierlist/Tierlist.module.css
+++ b/src/components/Tierlist/Tierlist.module.css
@@ -5,8 +5,10 @@
     /* max-height: 100vh; */
     /* display: flex; */
     /* justify-content: space-evenly; */
-    margin: 8px 24px;
-    border: 1px dimgray solid;
+    padding-top: 32px; /* +24 for AppNav */
+    margin: 0 40px 16px 12px;
+    border-left: 1px dimgray solid;
+    border-right: 1px dimgray solid;
 }
 
 .userTitle {
@@ -15,30 +17,21 @@
 
 .buttonHeader {
     padding: 6px 8px 4px;
+    border-top: 1px dimgray solid;
     border-bottom: 1px dimgray solid;
     align-items: center;
 }
 
 .imageButton {
-    padding: 4px 4px;
+    padding: 2px 2px;
     border: 1px #E0E0CD solid;
     background-color: #7E648A;
-    margin-right: 8px;
+    margin-right: 6px;
     /* align-items: center;
     justify-content: center; */
 }
 
-.linkImageButton {
-    position: absolute;
-    padding: 4px 4px 1px 4px;
-    border: 1px #E0E0CD solid;
-    background-color: #7E648A;
-    margin-right: 8px;
-    /* align-items: center;
-    justify-content: center; */
-}
-
-.imageButton:hover, .linkImageButton:hover {
+.imageButton:hover {
     background-color: #967CA3;
 }
 
